[package]
name = "isitbad_api"
version = "0.1.0 "
edition = "2021"
license-file = "LICENSE"

[features]
default = []
async = ["tokio"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["rt"], optional = true}
ureq = {version = "2.8.0", features = ["json"]}
